<resources>
    <string name="app_name">TrackApp</string>
    <string name="track_name">track name</string>
    <string name="length">length</string>
    <string name="laps">laps</string>
    <string name="date">date</string>
    <string name="best_time">best time</string>
    <string name="last_time">last time</string>
    <string name="timer">timer</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="save">save</string>
    <string name="start_time">00:00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>